--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 name = "bamkit"
 version = "0.1.0"
 edition = "2021"
+authors = ["sharkLoc <mmtinfo@163.com>"]
+rust-version = "1.65.0"
+homepage = "https://github.com/sharkLoc/bamkit"
+description = "bamkit: a simple program for bam file manipulation"
+keywords = ["bam", "sam", "cli"]
+readme = "README.md"
+license = "GPL-3.0"
+license-file = "LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
