--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,14 @@
 [package]
 name = "bamkit"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 authors = ["sharkLoc <mmtinfo@163.com>"]
 rust-version = "1.65.0"
 homepage = "https://github.com/sharkLoc/bamkit"
 description = "bamkit: a simple program for bam file manipulation"
-keywords = ["bam", "sam", "cli"]
+keywords = ["bam", "sam", "cli", "hts"]
 readme = "README.md"
 license = "GPL-3.0"
-license-file = "LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -18,6 +17,9 @@ clap = { version = "4.0.26", features = ["derive"] }
 colored = "2.0.0"
 plotly = "0.8.3"
 rust-htslib = "0.40.2"
+rand = "0.8.5"
+rand_pcg = "0.3.1"
+
 
 [profile.release]
 opt-level = 3
