--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ license = "GPL-3.0"
 clap = { version = "4.5.23", features = ["derive", "wrap_help"] }
 colored = "2.0.0"
 plotly = "0.8.3"
-rust-htslib = "0.40.2"   # "0.49.0"
+rust-htslib = "0.40.2"
 rand = "0.8.5"
 rand_pcg = "0.3.1"
 log = "0.4.22"
